err/atmosphericchemistry.err
Listing '.'...
Listing './bin'...
Compiling './bin/check_mass.py'...
***   File "./bin/check_mass.py", line 14
    print "Checking mass conservation for reactions of %s" % (compound)
                                                         ^
SyntaxError: invalid syntax

Compiling './bin/convert_moz_mim2.py'...
Compiling './bin/extract_photo_reactions.py'...
Compiling './bin/prepare_hammoz.py'...
***   File "./bin/prepare_hammoz.py", line 65
    print r.to_mech(short=True)
          ^
SyntaxError: invalid syntax

Compiling './bin/prepare_mecca.py'...
***   File "./bin/prepare_mecca.py", line 109
    print "#### dellist = ", dellist
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/test_reaction.py'...
Compiling './bin/test_translate.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/AtmosphericChemistry-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/ac'...
Listing './lib/python3.5/site-packages/ac/gasphase'...
Compiling './lib/python3.5/site-packages/ac/gasphase/compound.py'...
***   File "./lib/python3.5/site-packages/ac/gasphase/compound.py", line 126
    print tokens
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ac/gasphase/data'...
Compiling './lib/python3.5/site-packages/ac/gasphase/mechanism.py'...
***   File "./lib/python3.5/site-packages/ac/gasphase/mechanism.py", line 328
    print "Reading mechanism from file %s" % (f.name)
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ac/gasphase/reaction.py'...
***   File "./lib/python3.5/site-packages/ac/gasphase/reaction.py", line 503
    print "*** unknown header column! %s" % (h)
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ac/gasphase/speciestable.py'...
***   File "./lib/python3.5/site-packages/ac/gasphase/speciestable.py", line 88
    print "speciestable: default = ", masterTableFile
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ac/gasphase/test'...
Compiling './lib/python3.5/site-packages/ac/gasphase/test/test_mechanism.py'...
***   File "./lib/python3.5/site-packages/ac/gasphase/test/test_mechanism.py", line 54
    print "Writing %s in Mech format..." % (m)
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ac/gasphase/test/test_reaction.py'...
***   File "./lib/python3.5/site-packages/ac/gasphase/test/test_reaction.py", line 18
    print "Reactants =", reaction.reactants
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ac/testdata'...
Listing './lib/python3.5/site-packages/ac/utils'...
Compiling './lib/python3.5/site-packages/ac/utils/mathtree.py'...
***   File "./lib/python3.5/site-packages/ac/utils/mathtree.py", line 496
    print "### not a node %s - shouldn't happen!" % (str(node))
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ac/utils/mcm_query.py'...
***   File "./lib/python3.5/site-packages/ac/utils/mcm_query.py", line 39
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ac/utils/moleweight.py'...
***   File "./lib/python3.5/site-packages/ac/utils/moleweight.py", line 310
    print "Element %s not in second molecule." % (k)
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ac/utils/pubchempy.py'...
***   File "./lib/python3.5/site-packages/ac/utils/pubchempy.py", line 572
    print "PubChemPy version", __version__
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
